# sentinel

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/sentinel-audit/: Cargo.toml
crates/sentinel-audit/src/: chain.rs  keys.rs  lib.rs  record.rs
crates/sentinel-cli/: Cargo.toml
crates/sentinel-cli/src/: config.rs  main.rs
crates/sentinel-cli/src/commands/: bench.rs  dashboard.rs  mod.rs  query.rs  serve.rs  simulate.rs
crates/sentinel-core/: Cargo.toml
crates/sentinel-core/benches/: ingest.rs
crates/sentinel-core/src/: error.rs  lib.rs  time.rs
crates/sentinel-core/src/ai/: mod.rs  summarizer.rs
crates/sentinel-core/src/anomaly/: detector.rs  mod.rs  threshold.rs  zscore.rs
crates/sentinel-core/src/ingest/: event.rs  mod.rs
crates/sentinel-core/src/sketches/: ewma.rs  hll.rs  mod.rs  tdigest.rs
crates/sentinel-core/src/slo/: budget.rs  definition.rs  evaluator.rs  mod.rs
crates/sentinel-core/src/tsdb/: chunk.rs  mod.rs  series.rs  store.rs  wal.rs
crates/sentinel-core/tests/: end_to_end.rs  sketch_properties.rs
crates/sentinel-gateway/: Cargo.toml
crates/sentinel-gateway/src/: config.rs  main.rs  provenance.rs  proxy.rs  util.rs
crates/sentinel-gateway/src/approvals/: control.rs  mod.rs  notify.rs
crates/sentinel-gateway/src/commands/: approvals_cmd.rs  audit_cmd.rs  init.rs  keygen.rs  mod.rs  pin.rs  policy_cmd.rs  wrap.rs
crates/sentinel-gateway/tests/: e2e.rs  provenance.rs
crates/sentinel-policy/: Cargo.toml
crates/sentinel-policy/src/: eval.rs  glob.rs  lib.rs  model.rs
crates/sentinel-scan/: Cargo.toml
crates/sentinel-scan/src/: checks.rs  configs.rs  main.rs  model.rs  policy_gen.rs  probe.rs  report.rs
crates/sentinel-scan/tests/: scan_e2e.rs
docs/: agent-governance.md  architecture.md  slo-math.md
examples/: gateway-demo.sh  gateway-policy.example.yaml  gateway.example.yaml  scan-demo.sh  sentinel.example.yaml
