[workspace]
resolver = "2"
members = [
    "crates/sentinel-core",
    "crates/sentinel-cli",
    "crates/sentinel-policy",
    "crates/sentinel-audit",
    "crates/sentinel-gateway",
    "crates/sentinel-scan",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Sentinel contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/keat-s/sentinel"
description = "Embeddable observability engine for ML inference services"

[workspace.dependencies]
# async
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# http
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# data
dashmap = "6"
parking_lot = "0.12"
ahash = "0.8"
crc32fast = "1"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI / TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"

# numerics
ordered-float = "4"
rand = "0.8"
rand_distr = "0.4"

# error handling
thiserror = "1"
anyhow = "1"

# crypto / policy (agent-governance gateway)
sha2 = "0.10"
ed25519-dalek = "2"
hex = "0.4"
regex = "1"
tempfile = "3"

# time
hdrhistogram = "7"

# dev
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.bench]
opt-level = 3
lto = "thin"
