[package]
name = "sentinel-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Policy-as-code engine for Sentinel: least-privilege authorization for AI agent tool calls"

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_docs = "warn"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
